--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-like-widget [likes]="likes" (liked)="like()"></app-like-widget>
+<app-photo-frame description="Some description"
+                 src="https://picsum.photos/200/300"
+                 [likes]="likes"
+                 (liked)="like()">
+</app-photo-frame>
