--- a/src/app/shared/components/like-widget/like-widget.component.html
+++ b/src/app/shared/components/like-widget/like-widget.component.html
@@ -1,5 +1,5 @@
 <div class="like-widget-container" (click)="like()" (keyup.enter)="like()">
   <fa-icon tabindex="0" role="button" [attr.aria-describedby]="id" size="1x" [icon]="fonts.faThumbsUp"></fa-icon>
   <span [attr.id]="id" [attr.aria-label]="likes + ': people liked'" aria-live="polite" aria-atomic="true"
-        class="like-counter">{{likes}}</span>
+        class="like-counter">{{' ' + likes}}</span>
 </div>
